--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,13 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+backend/.codeExplain
+.env.local
+backend/.env
+backend/__pycache__/
+
+#vscode settings
+.vscode/
 
 # vercel
 .vercel
